2008-04-09  Tambet Ingo  <tambet@gmail.com>

	* src/gconf-helpers/gconf-helpers.c
	(nm_gconf_set_uint_array_helper): Implement.
	(nm_gconf_get_uint_array_helper): Implement.
	(read_one_setting_value_from_gconf): Handle DBUS_TYPE_G_UINT_ARRAY.
	(copy_one_setting_value_to_gconf): Ditto.
	(nm_gconf_set_stringlist_helper): Don't ignore NULL lists, it's an empty list
	and without this change, it was not possible to reset string list values.

	* src/connection-editor/page-ip4.c: Finish the implemention to load, validate,
	and save.

	* src/connection-editor/ce-page-ip4.glade: Replace the "Manual" checkbox with
	combo box to allow selecting "DHCP", "Auto IP", and "Manual".

	* src/connection-editor/page-wireless.c (update_connection): Fix a reference
	counting issue.

2008-04-08  Dan Williams  <dcbw@redhat.com>

	* icons/Makefile.am
	  icons/nm-vpn-standalone-lock.png
	  icons/nm-vpn-active-lock.png
		- Split VPN lock icons; add 16x16 centered icon for connection editor

	* icons/nm-vpn-lock.png
		- remove

	* src/applet.c
		- (nma_icons_load): use nm-vpn-active-lock.png

	* src/connection-editor/nm-connection-list.c
		- (new_connection_list): allow NULL icon pixbuf
		- (nm_connection_list_init): don't init stuff here because it can fail
		- (dispose): don't dispose of stuff that's not allocated
		- (nm_connection_list_new): init stuff here and clean up if it fails

	* src/connection-editor/main.c
		- (main): exit cleanly on init failure

2008-04-08  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (periodic_update_active_connection_timestamps): new function; update
			active connection timestamps every 5 minutes
		- (constructor, finalize): start/stop periodic update

2008-04-08  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-gsm.c
	  src/applet-device-wireless.c
	  src/applet-device-cdma.c
	  src/applet-device-wired.c
		- Handle unmanaged devices and wireless-disabled better

2008-04-08  Tambet Ingo  <tambet@gmail.com>
