@@ -1,3 +1,9 @@
+2008-04-09  Dan Williams  <dcbw@redhat.com>
+
+	* src/connection-editor/page-wireless.c
+		- (populate_ui): don't puke on blank SSID, like when adding a new
+			connection
+
 2008-04-09  Tambet Ingo  <tambet@gmail.com>
 
 	* src/gconf-helpers/gconf-helpers.c
